--- a/Arcona-dent/index-8.html
+++ b/Arcona-dent/index-8.html
@@ -178,7 +178,7 @@
             <div class="product-img-mob product-img-mob8"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
-            <p>Стоматологічна адгезивна система MASTERBOND застосовується для: з’єднання твердих тканин зуба з композитними пломбами, герметизації маргінальної щілини, зменшення полімеризаційної усадки, підготовки поверхні протетичних робіт перед їх цементуванням композитними цементами дуального затвердіння.</p>>
+            <p>Стоматологічна адгезивна система MASTERBOND застосовується для: з’єднання твердих тканин зуба з композитними пломбами, герметизації маргінальної щілини, зменшення полімеризаційної усадки, підготовки поверхні протетичних робіт перед їх цементуванням композитними цементами дуального затвердіння.</p>
             <p class="product-less">
             </p>
             <h4>
