--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -213,7 +213,7 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
