--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -167,9 +167,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>КОМПОЗИТ-ВОЛОКНО – стоматологічний медичний виріб, призначений для застосування у всіх композитних реконструкціях, де необхідне використання основи із стоматологічного волокна.</p>
 
             <p>КОМПОЗИТ-ВОЛОКНО є готовим для застосування продуктом, не вимагає жодних підготовчих маніпуляцій перед використанням.</p>
