--- a/Arcona-dent/index-11.html
+++ b/Arcona-dent/index-11.html
@@ -168,9 +168,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 Збільшує блиск композитних пломб і протетичних робіт. BOSTON GLAZE може застосовуватись для композитів світлового і хімічного затвердівання після повної їх полімеризації.
             </p>
@@ -206,7 +206,8 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
