--- a/Arcona-dent/index-13.html
+++ b/Arcona-dent/index-13.html
@@ -167,9 +167,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 Стоматологічний силікон для виготовлення моделей зубних рядів на основі як силіконових так і альгінатних відбитків.
 Дозволяє швидко, без застосування гіпсу і пов’язаних з його підготовкою процесів, виготовити якісну і високоточну модель, за лічені хвилини прямо у кабінеті лікаря.
@@ -206,7 +206,8 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
