--- a/Arcona-dent/index-3.html
+++ b/Arcona-dent/index-3.html
@@ -168,9 +168,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 Сучасний композит світлового затвердівання з надзвичайною колористикою – 9 кольорів на вибір!
 FLOW-COLOR повстав з думкою про наймолодших пацієнтів, наприклад, для герметизації борозд молочних і постійних зубів.
@@ -218,7 +218,8 @@ FLOW-COLOR повстав з думкою про наймолодших паці
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
