--- a/Arcona-dent/index-4.html
+++ b/Arcona-dent/index-4.html
@@ -168,9 +168,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 Найпопулярніший травильний гель у Польщі, оцінений за специфічні властивості і очікування лікарів-стоматологів, досконалий в процесі кількарічних досліджень і тестувань. ETCHMASTER має оптимальну консистенцію, а його компоненти запевняють ідеальну протравку опрацьованих поверхонь.
             </p>
@@ -209,7 +209,8 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
