--- a/Arcona-dent/index-6.html
+++ b/Arcona-dent/index-6.html
@@ -168,9 +168,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 BOSTON це мікрогібридний композит з підвищеною механічною міцністю, який дає лікарю винятковий комфорт при виконанні тимчасових і постійних протетичних робіт.
             </p>
@@ -222,7 +222,8 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
