--- a/Arcona-dent/index-7.html
+++ b/Arcona-dent/index-7.html
@@ -168,9 +168,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 BOSTON призначений для одного пацієнта, для виконання всіх видів пломбувань і реконструкцій передніх і бічних зубів, тимчасових і постійних, як каріозного, так і некаріозного походження.
             </p>
@@ -213,7 +213,8 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
