--- a/Arcona-dent/index-8.html
+++ b/Arcona-dent/index-8.html
@@ -168,9 +168,9 @@
             <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
             </a>
-            <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
+            <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
-            </a>
+            </div>
             <p>
                 Запевняє витривалість зв’язування на рівні 20 ± 3 MPa до емалі і 12 ± 2 MPa до дентину.
             </p>
@@ -204,7 +204,8 @@
 
 <!--////////// slider-->
 
-<div class="slider slider-main">
+<div class="slider slider-prod">
+
     <div class="slider__wrapper">
         <div class="slider__item slider__item-prod">
                 
