--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -191,9 +191,9 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Композит-Волокно_Інструкція.pdf</a>
-            <a class="product-pdf">Композит-волокно vs стекловолокно RU.pdf</a>
-            <a class="product-pdf">Композит-волокно Клиническое применение RU.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_Композит-Волокно_Інструкція.pdf">UA_Композит-Волокно_Інструкція.pdf</a><br>
+            <a class="product-pdf" target="_blank" href="./instructions/Композит-волокно vs стекловолокно RU.pdf">Композит-волокно vs стекловолокно RU.pdf</a><br>
+            <a class="product-pdf" target="_blank" href="./instructions/Композит-волокно Клиническое применение RU.pdf">Композит-волокно Клиническое применение RU.pdf</a>
         </div>
     </div>
 </div>
