--- a/Arcona-dent/index-3.html
+++ b/Arcona-dent/index-3.html
@@ -195,8 +195,8 @@ FLOW-COLOR повстав з думкою про наймолодших паці
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_FlowColor_Інструкція.pdf</a>
-            <a class="product-pdf">FlowColor RU.pdf</a>
+            <a class="product-pdf">UA_FlowColor_Інструкція.pdf</a><br>
+            <a class="product-pdf">FlowColor RU.pdf</a><br>
             <a class="product-pdf">FLOW color.docx</a>
             
         </div>
