--- a/Arcona-dent/index-4.html
+++ b/Arcona-dent/index-4.html
@@ -189,7 +189,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Etchmaster_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_Etchmaster_Інструкція.pdf">UA_Etchmaster_Інструкція.pdf</a>
         </div>
     </div>
 </div>
