--- a/Arcona-dent/index-6.html
+++ b/Arcona-dent/index-6.html
@@ -202,7 +202,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Boston_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_Boston_Інструкція.pdf">UA_Boston_Інструкція.pdf</a>
         </div>
     </div>
 </div>
