--- a/Arcona-dent/index-11.html
+++ b/Arcona-dent/index-11.html
@@ -186,7 +186,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_BostonGlaze_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_BostonGlaze_Інструкція.pdf">UA_BostonGlaze_Інструкція.pdf</a>
         </div>
     </div>
 </div>
