--- a/Arcona-dent/index-14.html
+++ b/Arcona-dent/index-14.html
@@ -197,7 +197,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Muson_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_Muson_Інструкція.pdf">UA_Muson_Інструкція.pdf</a>
         </div>
     </div>
 </div>
