--- a/Arcona-dent/index-2.html
+++ b/Arcona-dent/index-2.html
@@ -189,7 +189,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_NEXT_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_NEXT_Інструкція.pdf">UA_NEXT_Інструкція.pdf</a>
         </div>
     </div>
 </div>
