--- a/Arcona-dent/index-5.html
+++ b/Arcona-dent/index-5.html
@@ -199,7 +199,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Parosin_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_Parosin_Інструкція.pdf">UA_Parosin_Інструкція.pdf</a>
         </div>
     </div>
 </div>
