--- a/Arcona-dent/index-7.html
+++ b/Arcona-dent/index-7.html
@@ -193,7 +193,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_BostonBlister_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_BostonBlister_Інструкція.pdf">UA_BostonBlister_Інструкція.pdf</a>
         </div>
     </div>
 </div>
