--- a/Arcona-dent/index-8.html
+++ b/Arcona-dent/index-8.html
@@ -184,7 +184,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Masterbond_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_Masterbond_Інструкція.pdf">UA_Masterbond_Інструкція.pdf</a>
         </div>
     </div>
 </div>
