--- a/Arcona-dent/index-9.html
+++ b/Arcona-dent/index-9.html
@@ -194,7 +194,7 @@
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_FlowArt_Інструкція.pdf</a>
+            <a class="product-pdf" target="_blank" href="./instructions/UA_FlowArt_Інструкція.pdf">UA_FlowArt_Інструкція.pdf</a>
         </div>
     </div>
 </div>
