--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -8,11 +8,50 @@
     <link rel="shortcut icon" href="./images/" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script-page2.js"></script>
-   <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>-->
+   <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script> -->
+    <script>
+            /* Устанавливаем индекс слайда по умолчанию */
+// let slideIndex = 1;
+// showSlides(slideIndex);
+
+// /* Увеличиваем индекс на 1 — показываем следующий слайд*/
+// function nextSlide() {
+//     showSlides(slideIndex += 1);
+// }
+
+// /* Уменьшает индекс на 1 — показываем предыдущий слайд*/
+// function previousSlide() {
+//     showSlides(slideIndex -= 1);  
+// }
+
+// /* Устанавливаем текущий слайд */
+// function currentSlide(n) {
+//     showSlides(slideIndex = n);
+// }
+
+// /* Функция перелистывания */
+// function showSlides(n) {
+//     let i;
+//     let slides = document.getElementsByClassName("item-mob");
+    
+//     if (n > slides.length) {
+//       slideIndex = 1
+//     }
+//     if (n < 1) {
+//         slideIndex = slides.length
+//     }
+  
+//   /* Проходим по каждому слайду в цикле for */
+//     for (let slide of slides) {
+//         slide.style.display = "none";
+//     }   
+//     slides[slideIndex - 1].style.display = "block"; 
+// }
+    </script>
 </head>
 <body>
 
@@ -451,6 +490,31 @@
 
 <!--//////////slider-mob-->
 
+
+<!-- Основной блок слайдера -->
+<!-- <div class="slider-mob">
+  
+    <div class="item-mob">
+        <img src="https://s3.tproger.ru/uploads/2020/07/field.jpg">
+    </div>
+  
+    <div class="item-mob">
+        <img src="https://s3.tproger.ru/uploads/2020/07/rose.jpg">
+    </div>
+  
+    <div class="item-mob">
+        <img src="https://s3.tproger.ru/uploads/2020/07/leaf.jpg">
+    </div>
+  
+    <a class="previous" onclick="previousSlide()">&#10094;</a>
+    <a class="next" onclick="nextSlide()">&#10095;</a>
+</div> -->
+
+
+
+
+
+
     
 <div class="puppet">
     <a name="wbue"></a>
@@ -562,11 +626,11 @@
     </div>
     <div class='footer-blockmob'>
         <div class="blockmob-img blockmob-img1"></div>
-            <p>Ексклюзивний дистриб’ютор:Альпен Фарма АГ Берн, Швейцарія</p>
+            <p>Ексклюзивний дистриб’ютор:<br>Альпен Фарма АГ Берн, Швейцарія</p>
         </div>
         <div class='footer-blockmob'>
             <div class="blockmob-img blockmob-img2"></div>
-            <p>Уповноважений представник в Україні:
+            <p>Уповноважений представник в Україні:<br>
                 ПрАТ «НАТУРФАРМ» 04075 Україна, Київ, Пуща-Водиця, вул. Лiсна 30-А, Тел. (044) 401-81-03</p>
         </div>
         <p class="footer-year-mob">© 2021. All rights reserved</p>
