--- a/Arcona-dent/index-5.html
+++ b/Arcona-dent/index-5.html
@@ -568,11 +568,11 @@
     </div>
     <div class='footer-blockmob'>
         <div class="blockmob-img blockmob-img1"></div>
-            <p>Ексклюзивний дистриб’ютор:Альпен Фарма АГ Берн, Швейцарія</p>
+            <p>Ексклюзивний дистриб’ютор:<br>Альпен Фарма АГ Берн, Швейцарія</p>
         </div>
         <div class='footer-blockmob'>
             <div class="blockmob-img blockmob-img2"></div>
-            <p>Уповноважений представник в Україні:
+            <p>Уповноважений представник в Україні:<br>
                 ПрАТ «НАТУРФАРМ» 04075 Україна, Київ, Пуща-Водиця, вул. Лiсна 30-А, Тел. (044) 401-81-03</p>
         </div>
         <p class="footer-year-mob">© 2021. All rights reserved</p>
