--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -20,16 +20,16 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob" href="#block-5">ДЕ КУПИТи</a>
+            <a class="where-to-buy-mob" href="#block-5">где купить</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >для горла</a>
                 <a class="navmenu" href="#block-2">для носа</a>
                 <a class="navmenu" href="#block-3">для уха</a>
                 <a class="navmenu" href="#block-4">нано серебро</a>
 
-                <a class=" where-to-buy menuLi menuLi5" href="#block-5">ДЕ КУПИТи</a>
-                <a class="lang lang-dop"><b>UA</b></a>
-                <a class="lang" href="./index-ru.html"><p>RU</p>
+                <a class=" where-to-buy menuLi menuLi5" href="#block-5">где купить</a>
+                <a class="lang  lang-dop"><p>UA</p></a>
+                <a class="lang" href=""><b>RU</b>
                 </a>
             </div>
 
@@ -58,8 +58,8 @@
                             <a class=" where-to-buy menuLi menuLi5" href="#block-5">ГДЕ КУПИТЬ</a>
                         </li> -->
                         <li>
-                            <a class="lang lang-dop"><b>UA</b></a>
-                            <a class="lang" href="./index-ru.html"><p>RU</p></a>
+                            <a class="lang lang-dop "><p>UA</p></a>
+                            <a class="lang " href=""><b>RU</b></a>
                         </li>
                     </ul>
                 </div>
