--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -19,7 +19,6 @@
 <a name='top'></a>
     <div class="outer-navigation-container">
         <div class="navigation-container">
-            <a class="logo-container" href="#top"></a>
             <a class="where-to-buy-mob" href="#block-5">где купить</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >для горла</a>
@@ -88,6 +87,19 @@
     
 
 
+<div class="container-1_mob">
+    <div class="container-1_mob-top">
+        <div class="mob-logo"></div>
+        <div class="mob-silver"></div>
+    </div>
+    <p>
+        современное<br> искусство
+        в защите<br>
+        от бактерий<br>
+        и вирусов<sup>1</sup>
+    </p>
+    <div class="mob-head"></div>
+</div>
 
 <div class="container-1">
     <div class="container-1_left">
@@ -96,7 +108,7 @@
             современное искусство<br>
             в защите<br>
             от бактерий<br>
-            и вирусов<br>
+            и вирусов<sup>1</sup>
         </p>
     </div>
     <div class="container-1_right">
