--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 			<a href="Congress/index.html">Congress</a>
 			<a href="neiroplant-new/index.html">neiroplant-new</a>
 			<a href="Arcona-dent/index.html">Arcona-dent</a>
+			<a href="Coldisept/index.html">Coldisept</a>
 		</section>
 	</main>
 
@@ -300,6 +301,9 @@
 	}
 	a:nth-child(64)::before {
 		background: url("./Arcona-dent/bg.jpg")no-repeat center / cover;
+	}
+	a:nth-child(65)::before {
+		background: url("./Coldisept/logo.jpg")no-repeat center / cover;
 	}
 </style>
 
