--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -100,6 +100,9 @@
     </p>
     <div class="mob-head"></div>
 </div>
+<div class="container-2_mob">
+
+</div>
 
 <div class="container-1">
     <div class="container-1_left">
