--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -157,9 +157,9 @@
                 <p>Не сушит слизистую оболочку, не содержит спирт и антибиотики.</p>
             </div>
             <div class="container-3_right-block">
-                <div class="c-compare" style="--value:50%;">
-                    <img class="c-compare__left" src="./images/photo1.jpg" alt="Color" />
-                    <img class="c-compare__right" src="./images/photo2.jpg" alt="B/W" />
+                <div class="c-compare" style="--value:50%; background-size: contain;">
+                    <img class="c-compare__left" src="./images/photo1.png" style="max-width: 100%; height: auto;" alt="Color" />
+                    <img class="c-compare__right" src="./images/photo2.png"  style="max-width: 100%; height: auto;" alt="B/W" />
                     <input type="range" class="c-rng c-compare__range" min="0" max="100" value="50" oninput="this.parentNode.style.setProperty('--value', `${this.value}%`)" />
                   </div>
             </div>
