--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -187,6 +187,7 @@
             <h2>КОЛДИСЕПТ <span>наноСИЛЬВЕР</span><br>
                 <span class="container-5_h2">Спрей для горла</span>
             </h2>
+            <div class="mob-container-5_img-block"></div>
             <p>
                 <b>Применяется при:</b> воспалении слизистых оболочек рта и горла; воспалении миндалин; состоянии после удаления миндалин.
             </p>
@@ -241,6 +242,7 @@
             <h2>КОЛДИСЕПТ <span>наноСИЛЬВЕР</span><br>
                 <span class="container-5_h2">Назальный спрей</span>
             </h2>
+            <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
             <p>
                 <b>Применяется при:</b> Применяется при: инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
@@ -296,6 +298,7 @@
             <h2>КОЛДИСЕПТ <span>наноСИЛЬВЕР</span><br>
                 <span class="container-5_h2">Назальный спрей</span>
             </h2>
+            <div class="mob-container-5_img-block mob-container-5_img-block-orange"></div>
             <p>
                 <b>Применяется при:</b> Применяется при: инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
