--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -19,6 +19,7 @@
 <a name='top'></a>
     <div class="outer-navigation-container">
         <div class="navigation-container">
+            <a class="logo-container" href="./index.html"></a>
             <!-- <a class="where-to-buy-mob" href="#block-5">где купить</a> -->
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >для горла</a>
