--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -22,14 +22,14 @@
             <a class="logo-container" href="./index.html"></a>
             <!-- <a class="where-to-buy-mob" href="#block-5">где купить</a> -->
             <div class="navigation-menu">
-                <a class="navmenu" href="#block-1" >для горла</a>
-                <a class="navmenu" href="#block-2">для носа</a>
-                <a class="navmenu" href="#block-3">для уха</a>
-                <a class="navmenu" href="#block-4">нано серебро</a>
+                <a class="navmenu" href="#block-1" >Throat</a>
+                <a class="navmenu" href="#block-2">Nose</a>
+                <a class="navmenu" href="#block-3">Ear</a>
+                <a class="navmenu" href="#block-4">nanoSilver</a>
 
                 <!-- <a class=" where-to-buy menuLi menuLi5" href="#block-5">где купить</a> -->
-                <a class="lang  lang-dop" href="index-en.html"><p>EN</p></a>
-                <a class="lang" ><b>RU</b>
+                <a class="lang  lang-dop"><b>EN</b></a>
+                <a class="lang" href="./index.html"><p>RU</p>
                 </a>
             </div>
 
@@ -41,25 +41,25 @@
                     <ul id="menu">
                         <li>
 
-                            <a class="navmenu menuLi menuLi1" href="#block-1" >для горла
+                            <a class="navmenu menuLi menuLi1" href="#block-1" >Throat
 
                             </a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi menuLi2" href="#block-2">для носа</a>
+                            <a class="navmenu menuLi menuLi2" href="#block-2">Nose</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi menuLi3" href="#block-3">для уха</a>
+                            <a class="navmenu menuLi menuLi3" href="#block-3">Ear</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi menuLi4" href="#block-4">нано серебро</a>
+                            <a class="navmenu menuLi menuLi4" href="#block-4">nanoSilver</a>
                         </li>
 <!--                         <li>
                             <a class=" where-to-buy menuLi menuLi5" href="#block-5">ГДЕ КУПИТЬ</a>
                         </li> -->
                         <li>
-                            <a class="lang lang-dop " href="index-en.html"><p>EN</p></a>
-                            <a class="lang " href=""><b>RU</b></a>
+                            <a class="lang lang-dop "><b>EN</b></a>
+                            <a class="lang " href="index.html"><p>RU</p></a>
                         </li>
                     </ul>
                 </div>
@@ -94,10 +94,10 @@
         <div class="mob-silver"></div>
     </div>
     <p>
-        современное<br> искусство
-        в защите<br>
-        от бактерий<br>
-        и вирусов<sup>1</sup>
+        modern art<br>
+        in protection<br>
+        against bacteria<br>
+        and viruses<sup>1</sup>
     </p>
     <div class="mob-head"></div>
 </div>
@@ -109,10 +109,10 @@
     <div class="container-1_left">
         <div class="container-1_left-img"></div>
         <p>
-            современное искусство<br>
-            в защите<br>
-            от бактерий<br>
-            и вирусов<sup>1</sup>
+            modern art<br>
+        in protection<br>
+        against bacteria<br>
+        and viruses<sup>1</sup>
         </p>
     </div>
     <div class="container-1_right">
@@ -123,22 +123,21 @@
 
 <div class="container-2">
     <div class="container_inner">
-        <h2>Знакомы ли Вам такие <b>симптомы?</b></h2>
+        <h2>Are these <b>symptoms</b> familiar to you?</h2>
         <div class="container-2_plates">
             <div class="container-2_plate">
-                <p class="container-2_plate-title">Боль в горле</p>
-                <p>Воспаление миндалин
-                    и горла</p>
+                <p class="container-2_plate-title">Sore throat</p>
+                <p>Inflammation of the tonsils and throat</p>
             </div>
             <div class="container-2_plate">
-                <p class="container-2_plate-title">Насморк</p>
+                <p class="container-2_plate-title">Runny nose</p>
                 <p>
-                    Синуситы, инфекционные и аллергические риниты
+                    Sinusitis, infectious and allergic rhinitis
                 </p>
             </div>
             <div class="container-2_plate">
-                <p class="container-2_plate-title">Ушная боль</p>
-                <p>Воспаление внешнего уха различной этиологии</p>
+                <p class="container-2_plate-title">Ear pain</p>
+                <p>Inflammation of the external ear of various etiologies</p>
             </div>
         </div>
     </div>
@@ -146,16 +145,16 @@
 
 <div class="container-3">
     <div class="container_inner">
-        <h2><b>7 ПРЕИМУЩЕСТВ</b> ЛИНЕЙКИ КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР</h2>
+        <h2><b>7 ADVANTAGES</b> OF THE COLDISEPT <span>nano</span>SILVER​</h2>
         <div class="container-3_main">
             <div class="container-3_left-block">
-                <p>Разработан с применением нано технологий<sup>2</sup>;</p>
-                <p>Комплексное действие: антибактериальное, противовирусное, противовоспалительное, восстанавливающее<sup>*</sup>;</p>
-                <p>Воздействует на вирусы и бактерии, препятствует их проникновению;</p>
-                <p>Стимулирует восстановление слизистой;</p>
-                <p>Способствует снятию воспаления<sup>3</sup>;</p>
-                <p>Создает защитный слой с молекулами нано серебра;</p>
-                <p>Не сушит слизистую оболочку, не содержит спирт и антибиотики.</p>
+                <p>Designed with nanotechnology<sup>2</sup>;</p>
+                <p>Complex: antibacterial, antiviral, anti-inflammatory, regenerating properties<sup>*</sup>;</p>
+                <p>Affects viruses and bacteria, prevents their penetration;</p>
+                <p>Stimulates mucosal regeneration;</p>
+                <p>Relieve inflammation<sup>3</sup>;</p>
+                <p>Creates a protective layer with nanosilver;</p>
+                <p>Does not dry the mucous membrane, does not contain alcohol and antibiotics.</p>
             </div>
             <div class="container-3_right-block">
                 <div class="c-compare" style="--value:50%; background-size: contain;">
@@ -176,7 +175,7 @@
     <div class="container-4_left"></div>
     <div class="container-4_right">
         <div class="container-4_inner">
-            <p>Позволь себе глотать без боли</p>
+            <p>Let yourself to swallow without pain</p>
         </div>
     </div>
 </div>
@@ -185,34 +184,34 @@
 <div class="container-5">
     <div class="container-5_inner">
         <div class="container-5_text-block">
-            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br>
-                <span class="container-5_h2">Спрей для горла</span>
+            <h2>COLDISEPT <span>nano</span>SILVER​<br>
+                <span class="container-5_h2">Throat spray</span>
             </h2>
             <div class="mob-container-5_img-block"></div>
-            <p>
+            <!-- <p>
                 <b>Применяется при:</b> воспалении слизистых оболочек рта и горла; воспалении миндалин; состоянии после удаления миндалин.
-            </p>
+            </p> -->
             <p>
-                <b>Преимущества:</b>
+                <b>Indication:</b>
             </p>
             <div class="container-5_plates">
                 <div class="container-5_plate">
-                    <p>Действует на основные причины заболевания</p>
+                    <p>inflammation of the mucous membranes of the mouth and the throat;</p>
                 </div>
                 <div class="container-5_plate">
-                    <p>Защищает от вирусов и бактерий</p>
+                    <p>inflammation of tonsils;</p>
                 </div>
                 <div class="container-5_plate">
-                    <p>Стимулирует восстановление</p>
+                    <p>condition after removal of tonsils.</p>
                 </div>
-                <div class="container-5_plate">
+                <!-- <div class="container-5_plate">
                     <p>Не содержит спирта и антибиотиков</p>
-                </div>
+                </div> -->
             </div>
-            <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, масло мяты перечной, минеральные соли и др.</p>
+            <p><b>Components:</b> nanocolloid silver, Chondrus crispus extract, peppermint oil, mineral salts etc.</p>
             <div class="container-5_btns">
-                <a>Где купить</a>
-                <a>Инструкция</a>
+                <a>Instruction</a>
+                <a>BUY</a>
             </div>
         </div>
         <div class="container-5_img-block">
@@ -231,7 +230,7 @@
 <div class="container-4">
     <div class="container-4_right container-4_right-blue">
         <div class="container-4_inner">
-            <p>Позволь себе дышать без насморка</p>
+            <p>Let yourself breathe without a runny nose</p>
         </div>
     </div>
     <div class="container-4_left container-4_left2"></div>
@@ -240,35 +239,34 @@
 <div class="container-5 container-5_blue">
     <div class="container-5_inner">
         <div class="container-5_text-block">
-            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br><br>
-                <span class="container-5_h2">Назальный спрей</span>
+            <h2>COLDISEPT <span>nano</span>SILVER​<br>
+                <span class="container-5_h2">Nasal spray</span>
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
-            <p>
+            <!-- <p>
                 <b>Применяется при:</b> Применяется при: инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
-            <p>(полный перечень показаний к применений находится в инструкции)</p>
+            <p>(полный перечень показаний к применений находится в инструкции)</p> -->
             <p>
-                <b>Преимущества:</b>
+                <b>Indication:</b>
             </p>
             <div class="container-5_plates">
                 <div class="container-5_plate">
-                    <p>Действует на основные причины заболевания</p>
+                    <p>infectious, atrophic or allergic rhinitis;</p>
                 </div>
                 <div class="container-5_plate">
-                    <p>Защищает от вирусов и бактерий</p>
+                    <p>sinusitis;</p>
                 </div>
                 <div class="container-5_plate">
-                    <p>Стимулирует восстановление</p>
-                </div>
-                <div class="container-5_plate">
-                    <p>Не содержит антибиотиков</p>
+                    <p>the use of drugs that damage the epithelium of nasal mucosa etc.</p>
                 </div>
             </div>
-            <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, минеральные соли и др.</p>
+            <p>(a complete list of indications for use is in the instructions).</p>
+
+            <p><b>Components:</b> nanocolloid silver, Chondrus crispus extract, mineral salts etc.</p>
             <div class="container-5_btns">
-                <a>Где купить</a>
-                <a>Инструкция</a>
+                <a>Instruction</a>
+                <a>BUY</a>
             </div>
         </div>
         <div class="container-5_img-block">
@@ -288,7 +286,7 @@
     <div class="container-4_left container-4_left3"></div>
     <div class="container-4_right container-4_right-orange">
         <div class="container-4_inner">
-            <p>Позволь себе слышать без боли</p>
+            <p>Let yourself hear without pain</p>
         </div>
     </div>
 </div>
@@ -296,35 +294,26 @@
 <div class="container-5 container-5_orange">
     <div class="container-5_inner">
         <div class="container-5_text-block">
-            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br><br>
-                <span class="container-5_h2">Назальный спрей</span>
+            <h2>COLDISEPT <span>nano</span>SILVER​<br>
+                <span class="container-5_h2">Ear drops</span>
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-orange"></div>
-            <p>
+            <!-- <p>
                 <b>Применяется при:</b> Применяется при: инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
-            <p>(полный перечень показаний к применений находится в инструкции)</p>
+            <p>(полный перечень показаний к применений находится в инструкции)</p> -->
             <p>
-                <b>Преимущества:</b>
+                <b>Indication:</b>
             </p>
             <div class="container-5_plates">
                 <div class="container-5_plate">
-                    <p>Действует на основные причины заболевания</p>
-                </div>
-                <div class="container-5_plate">
-                    <p>Защищает от вирусов и бактерий</p>
-                </div>
-                <div class="container-5_plate">
-                    <p>Стимулирует восстановление</p>
-                </div>
-                <div class="container-5_plate">
-                    <p>Не содержит антибиотиков</p>
+                    <p>external auditory canal inflammation, resulting from bacterial and fungal infections.</p>
                 </div>
             </div>
-            <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, минеральные соли и др.</p>
+            <p><b>Components:</b> nanocolloid silver, nanocolloid copper etc.</p>
             <div class="container-5_btns">
-                <a>Где купить</a>
-                <a>Инструкция</a>
+                <a>Instruction</a>
+                <a>BUY</a>
             </div>
         </div>
         <div class="container-5_img-block">
@@ -341,36 +330,36 @@
 <div class="container-6">
     <div class="container-6_inner">
         <div class="container-6_top">
-            <h2><span class="container-5_h2">НЕСКОЛЬКО ФАКТОВ О</span><br> <span>нано</span>СЕРЕБРЕ</h2>
+            <h2><span class="container-5_h2">A FEW FACTS ABOUT </span><br> <span>nano</span>SILVER​</h2>
             <div class="container-6_img"></div>
         </div>
         <div class="container-6_plates">
             <div class="container-6_plate">
-                <p>Нанотехнологии на сегодняшний день активно применяются в медицине, так как открывают новые возможности в лечении различных заболеваний.<sup>4-5</sup></p>
+                <p>Today nanotechnology is actively used in medicine, as it opens up new possibilities in the treatment of various diseases.<sup>4-5</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Нанотехнология считается «ключевой технологией 21 века», что говорит о широте ее возможного применения.<sup>6</sup></p>
+                <p>Nanotechnology is considered the "key technology of the 21st century<sup>6</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Учитывая антибактериальные и противовирусные свойства наноматериалов их наиболее часто используются как альтернативу антибиотикам и противовирусным препаратам.<sup>7-12</sup></p>
+                <p>Given the antibacterial and antiviral properties of nanomaterials, they are most often used as an alternative to antibiotics and antiviral drugs.<sup>7-12</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Одними из наиболее распространённых наноматериалами являются серебро и медь.<sup>6</sup></p>
+                <p>Some of the most common nanomaterials that use in medicine are silver and copper.<sup>6</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Антибактериальные свойства серебра и меди известные и доказаны на протяжение многих десятилетии. Технологии, позволяющие использовать наночастицы этих металлов меняют подходы к лечению некоторых заболеваний.<sup>4-12</sup></p>
+                <p>The antibacterial properties of silver and copper are known and proven for many decades. Technologies that allow the use of nanoparticles of these metals are changing approaches to the treatment of some diseases.<sup>4-12</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Колдисепт содержит наночастицы серебра в виде нанопластинок, что позволяет им легко прилипать к различным поверхностям, в том числе бактериям и вирусам.<sup>14</sup></p>
+                <p>Coldisept contains silver nanoparticles in the form of nanoplates, which allows them to easily adhere to various surfaces, including bacteria and viruses.<sup>14</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Наночастицы серебра Колдисепта совместно с экстрактом ирландского мха* создают защитный слой геля, который препятствует проникновению инфекции.<sup>13</sup></p>
+                <p>Coldisept silver nanoparticles together with Chondrus crispus extract* create a protective gel layer that prevents the penetration of infection.<sup>13</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Защитный слой не только останавливает вирусы и бактерии, но и стимулирует восстановление слизистой оболочки.<sup>13</sup></p>
+                <p>The protective layer not only stops viruses and bacteria, but also stimulates the regeneration of the mucous membrane.<sup>13</sup></p>
             </div>
             <div class="container-6_plate">
-                <p>Благодаря наночастичкам серебра Колдисепт наноСильвер можно рассматривать как альтернативу стандартным методам лечения бактериальных и вирусных инфекциях ЛОР органов.<sup>4-12</sup></p>
+                <p>Through silver nanoparticles, Coldisept nanoSilver can be considered as an alternative to standard methods of treating bacterial and viral ENT infections.<sup>4-12</sup></p>
             </div>
         </div>
     </div>
@@ -382,8 +371,8 @@
 <div class="container-7">
     <div class="container_inner">
         <p class="container-7_title">
-            Источники информации:
-        </p>
+            References:
+                </p>
         <p>
            1. F. Pilaquinga et al. Silver nanoparticles as a potential treatment against SARS-CoV-2: A review. WIREs Nanomed Nanobiotechnol. 2021.
         </p>
@@ -427,8 +416,8 @@
             14. Nano Koloid 2020. https://nanogrp.com/
         </p>
         <p class="container-7_mark">
-            Колдисепт НаноСильвер является изделием медицинского назначения, с более детальной информацией можно ознакомится в инструкции к применению.
-            <br><sup>*</sup> Данные свойства не характерны продукту Колдисепт НаноСильвер Ушные капли
+            Coldisept NanoSilver is a medical device, more detailed information can be found in the instructions for use.
+            <br><sup>*</sup> These properties are not characteristic of Coldisept NanoSilver Ear drops.
         </p>
     </div>
 </div>
