--- a/Cinnabsin/index.html
+++ b/Cinnabsin/index.html
@@ -124,6 +124,10 @@
             width: 100vw; margin: 40px 0 200px;
         }
 
+
+
+
+
         @media screen and (max-width: 1024px)
     {.media {
         flex-direction: column-reverse;
@@ -205,6 +209,7 @@
                 display: none;
             }
             .comp-4-mob {
+                padding-top: 120px;
                 width: 100vw;height: 900px; margin: 100px 0; background-color: rgb(235, 235, 235);
             }
             .comp-column {
@@ -218,7 +223,7 @@
                 width: 90%;
             }
             .disc-mob-back {
-                width: 78%;
+                width: 91%;
                 padding: 0 40px;
             }
             .comp-1 {
@@ -244,6 +249,12 @@
                  top:-95px; left: 25px;
             }
     }
+
+    @media screen and (max-width: 450px) {
+            .disc-mob-back {
+                    width: 78%;
+            }
+        }
 
     html {scroll-behavior: smooth;} a{ margin-right: 10px; text-decoration: none;color:black; } body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 </head>
