--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -240,12 +240,12 @@
 <div class="container-5 container-5_blue">
     <div class="container-5_inner">
         <div class="container-5_text-block">
-            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br><br>
+            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br>
                 <span class="container-5_h2">Назальный спрей</span>
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
             <p>
-                <b>Применяется при:</b> Применяется при: инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
+                <b>Применяется при:</b> инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
             <p>(полный перечень показаний к применений находится в инструкции)</p>
             <p>
@@ -296,14 +296,13 @@
 <div class="container-5 container-5_orange">
     <div class="container-5_inner">
         <div class="container-5_text-block">
-            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br><br>
-                <span class="container-5_h2">Назальный спрей</span>
+            <h2>КОЛДИСЕПТ <span>нано</span>СИЛЬВЕР<br>
+                <span class="container-5_h2">Ушные капли</span>
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-orange"></div>
             <p>
-                <b>Применяется при:</b> Применяется при: инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
+                <b>Применяется при:</b> воспалении наружного слухового прохода, возникшего в результате бактериальных и грибковых инфекций.
             </p>
-            <p>(полный перечень показаний к применений находится в инструкции)</p>
             <p>
                 <b>Преимущества:</b>
             </p>
@@ -312,16 +311,13 @@
                     <p>Действует на основные причины заболевания</p>
                 </div>
                 <div class="container-5_plate">
-                    <p>Защищает от вирусов и бактерий</p>
+                    <p>Не содержит антибиотиков и гормонов</p>
                 </div>
                 <div class="container-5_plate">
-                    <p>Стимулирует восстановление</p>
-                </div>
-                <div class="container-5_plate">
-                    <p>Не содержит антибиотиков</p>
+                    <p>Снимает воспаления</p>
                 </div>
             </div>
-            <p><b>Компоненты:</b> наноколлоидное серебро, экстракт ирландского мха, минеральные соли и др.</p>
+            <p><b>Компоненты:</b> наноколлоидное серебро, наноколлоидная медь и др.</p>
             <div class="container-5_btns">
                 <a>Где купить</a>
                 <a>Инструкция</a>
