--- a/Tansilotren-KZ/index.html
+++ b/Tansilotren-KZ/index.html
@@ -44,7 +44,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang" href="index-kz.html">ua</a>
+                            <a class="lang" href="index-kz.html">kz</a>
                         </li>
                     </ul>
                 </div>
