--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -440,7 +440,7 @@
                   </div>
           </div>
         <p class="vita-disclamer">
-            САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
+            DISCLAIMER
         </p>
       </div>
   </div>
