--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -133,7 +133,7 @@
             <div class="container-2_plate">
                 <p class="container-2_plate-title">Насморк</p>
                 <p>
-                    Синуситы, инфекционные и аллергические риниты
+                    Риносинуситы, инфекционные и аллергические риниты
                 </p>
             </div>
             <div class="container-2_plate">
@@ -245,7 +245,7 @@
             </h2>
             <div class="mob-container-5_img-block mob-container-5_img-block-blue"></div>
             <p>
-                <b>Применяется при:</b> инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение синусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
+                <b>Применяется при:</b> инфекционном, аллергическом или атрофическом ринитах; как поддерживающее лечение риносинусита; употреблении препаратов, повреждающих эпителий слизистой оболочки носа и др.
             </p>
             <p>(полный перечень показаний к применений находится в инструкции)</p>
             <p>
@@ -447,7 +447,7 @@
                   </div>
           </div>
         <p class="vita-disclamer">
-            САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я
+            ДИСКЛЕЙМЕР
         </p>
       </div>
   </div>
