--- a/Coldisept/index-en.html
+++ b/Coldisept/index-en.html
@@ -107,7 +107,7 @@
 
 <div class="container-1">
     <div class="container-1_left">
-        <div class="container-1_left-img"></div>
+        <div class="container-1_left-img container-1_left-img-en"></div>
         <p>
             modern art<br>
         in protection<br>
