--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -159,8 +159,8 @@
             </div>
             <div class="container-3_right-block">
                 <div class="c-compare" style="--value:50%; background-size: contain;">
-                    <img class="c-compare__left" src="./images/photo1.png" style="max-width: 100%; height: auto;" alt="Color" />
-                    <img class="c-compare__right" src="./images/photo2.png"  style="max-width: 100%; height: auto;" alt="B/W" />
+                    <img class="c-compare__left" src="./images/photo1-ru.png" style="max-width: 100%; height: auto;" alt="Color" />
+                    <img class="c-compare__right" src="./images/photo2-ru.png"  style="max-width: 100%; height: auto;" alt="B/W" />
                     <input type="range" class="c-rng c-compare__range" min="0" max="100" value="50" oninput="this.parentNode.style.setProperty('--value', `${this.value}%`)" />
                   </div>
             </div>
@@ -215,7 +215,7 @@
                 <a>Инструкция</a>
             </div>
         </div>
-        <div class="container-5_img-block">
+        <div class="container-5_img-block container-5_img-block-ru">
 
         </div>
     </div>
@@ -271,7 +271,7 @@
                 <a>Инструкция</a>
             </div>
         </div>
-        <div class="container-5_img-block">
+        <div class="container-5_img-block container-5_img-block-ru">
 
         </div>
     </div>
@@ -323,7 +323,7 @@
                 <a>Инструкция</a>
             </div>
         </div>
-        <div class="container-5_img-block">
+        <div class="container-5_img-block container-5_img-block-ru">
 
         </div>
     </div>
