--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -115,7 +115,7 @@
             и вирусов<sup>1</sup>
         </p>
     </div>
-    <div class="container-1_right">
+    <div class="container-1_right container-1_right-ru">
 
     </div>
     
