--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<a href="neiroplant-new/index.html">neiroplant-new</a>
 			<a href="Arcona-dent/index.html">Arcona-dent</a>
 			<a href="Coldisept/index.html">Coldisept</a>
-			<a href="Coldisept-UA/index.html">Coldisept-UA</a>
+			<a href="Coldisept-ua/index.html">Coldisept-UA</a>
 		</section>
 	</main>
 
@@ -307,7 +307,7 @@
 		background: url("./Coldisept/logo.jpg")no-repeat center / cover;
 	}
 	a:nth-child(66)::before {
-		background: url("./Coldisept-UA/logo.jpg")no-repeat center / cover;
+		background: url("./Coldisept-ua/logo.jpg")no-repeat center / cover;
 	}
 </style>
 
