--- a/Coldisept/index.html
+++ b/Coldisept/index.html
@@ -101,7 +101,7 @@
     </p>
     <div class="mob-head"></div>
 </div>
-<div class="container-2_mob">
+<div class="container-2_mob container-2_mob-ru">
 
 </div>
 
