--- a/Coldisept-ua/index-ru.html
+++ b/Coldisept-ua/index-ru.html
@@ -97,7 +97,7 @@
         современное<br> искусство
         в защите<br>
         от бактерий<br>
-        и вирусов<sup>1</sup>
+        и вирусов
     </p>
     <div class="mob-head"></div>
 </div>
@@ -112,7 +112,7 @@
             современное искусство<br>
             в защите<br>
             от бактерий<br>
-            и вирусов<sup>1</sup>
+            и вирусов
         </p>
     </div>
     <div class="container-1_right container-1_right-ru">
