--- a/Coldisept-ua/index.html
+++ b/Coldisept-ua/index.html
@@ -444,9 +444,9 @@
                     <div class="logo2-mob"></div>
                   </div>
           </div>
-        <p class="vita-disclamer">
+<!--         <p class="vita-disclamer">
             ДИСКЛЕЙМЕР
-        </p>
+        </p> -->
       </div>
   </div>
 
